--- a/rbm-tensorflow/pyproject.toml
+++ b/rbm-tensorflow/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "tensorflow>=2.17.0",
+    "keras<3.0",
+    "tensorflow<2.16",
 ]
