--- a/rbm-tensorflow/pyproject.toml
+++ b/rbm-tensorflow/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "matplotlib>=3.9.2",
+    "pandas>=2.2.3",
     "tensorflow<2.16",
 ]
